grammar.js
    source: ($) =>
      seq(
        repeat($.comment),
        optional(seq(seq($.subject, NEWLINE), repeat($.comment))),
        optional(seq(NEWLINE, alias(repeat($._body_line), $.message))),
        optional($._generated_comments),
        optional($._scissor)
      ),

    subject: ($) =>
      seq(
        optional(
          seq(alias(choice('fixup!', 'amend!'), $.subject_prefix), WHITESPACE)
        ),
        choice(seq(NOT_A_COMMENT, ANYTHING_OR_NONE), seq($.prefix, ANYTHING))
      ),

    _body_line: ($) =>
      choice($.message_line, $.breaking_change, $.trailer, $.comment, NEWLINE),

    message_line: () => seq(seq(NOT_A_COMMENT, ANYTHING_OR_NONE)),

    breaking_change: ($) =>
      seq(
        // BREAKING_CHANGE conflicts with TRAILER_TOKEN, an so requires higher
        // lexical precedence
        alias(token(prec(1, BREAKING_CHANGE)), $.token),
        optional(alias(BREAKING_CHANGE_VALUE, $.value))
      ),

    comment: ($) =>
      seq(
        '#',
        optional(WHITESPACE),
        optional(
          choice(alias(COMMENT_TITLE, $.title), token(prec(-1, COMMENT)))
        )
      ),
    _generated_comments: ($) =>
      seq(
        $._generated_comment_separator,
        repeat(choice($.generated_comment, NEWLINE))
      ),

    generated_comment: ($) =>
      choice(
        seq(/#\t/, $._change),
        seq('#    ', $.rebase_command),
        seq(
          /#[ ]*/,
          optional(
            choice(
              $.rebase_command,
              $._onbranch,
              $._uptodate,
              $._behind,
              $._ahead,
              $._detached_head,
              $._rebasing,
              $._interactive_rebasing,
              seq(
                alias(token(prec(-1, GENERATED_COMMENT_TITLE)), $.title),
                optional(alias(COMMENT, $.value))
              ),
              token(prec(-2, COMMENT))
            )
          )
        )
      ),

    _onbranch: ($) =>
      seq(
        alias(
          // prettier-ignore
          choice(
            // onbranch
            "Ar bhrainse ",
            "Auf Branch ",
            "Em ramo ",
            "En la branca ",
            "En la rama ",
            "Na gałęzi ",
            "No ramo ",
            "On branch ",
            "Pada cabang ",
            "På grenen ",
            "Sul branch ",
            "Sur la branche ",
            "Trên nhánh ",
            "Üzerinde bulunulan dal: ",
            "Στον κλάδο ",
            "На ветке ",
            "На гілці ",
            "На клон ",
            "Текущая ветка: ",
            "位于分支 ",
            "位於分支 ",
            "현재 브랜치 "
            // end onbranch
          ),
          $.text
        ),
        alias(BRANCH_NAME, $.branch),
        NEWLINE
      ),

    _change: ($) =>
      choice(
        seq(optional($.change), optional(WHITESPACE), $._filepath),
        token(prec(-1, ANYTHING))
      ),

    change: ($) =>
      field(
        'kind',
        choice($.new, $.modified, $.renamed, $.deleted, $.typechange)
      ),

    new: () =>
      // prettier-ignore
      choice(
        // newfile
        "berkas baru:",
        "comhad nua:",
        "fitxer nou:",
        "neue Datei:",
        "new file:",
        "nouveau fichier :",
        "novo ficheiro:",
        "nowy plik:",
        "nuevo archivo:",
        "nuevos archivos:",
        "nuovo file:",
        "ny fil:",
        "tập tin mới:",
        "yeni dosya:",
        "νέο αρχείο:",
        "нов файл:",
        "новий файл:",
        "новый файл:",
        "新文件：",
        "新檔案：",
        "새 파일:"
        // end newfile
      ),
    deleted: () =>
      // prettier-ignore
      choice(
        // deleted
        "borrado:",
        "borrados:",
        "borttagen:",
        "deleted:",
        "eliminado:",
        "eliminato:",
        "gelöscht:",
        "scriosta:",
        "silindi:",
        "supprimé :",
        "suprimit:",
        "terhapus:",
        "usunięto:",
        "đã xóa:",
        "διαγραφή:",
        "видалено:",
        "изтрит:",
        "удалено:",
        "删除：",
        "刪除：",
        "삭제함:"
        // end deleted
      ),
    modified: () =>
      // prettier-ignore
      choice(
        // modified
        "değiştirildi:",
        "geändert:",
        "modhnaithe:",
        "modificado:",
        "modificados:",
        "modificat:",
        "modificato:",
        "modified:",
        "modifié :",
        "terubah:",
        "zmieniono:",
        "ändrad:",
        "đã sửa:",
        "τροποποίηση:",
        "змінено:",
        "изменено:",
        "променен:",
        "修改：",
        "수정함:"
        // end modified
      ),
    renamed: () =>
      // prettier-ignore
      choice(
        // renamed
        "athainmnithe:",
        "canviat de nom:",
        "namnbytt:",
        "nome mudado:",
        "renamed:",
        "renombrado:",
        "renombrados:",
        "renomeado:",
        "renommé :",
        "rinominato:",
        "terganti nama:",
        "umbenannt:",
        "yeniden adlandırıldı:",
        "zmieniono nazwę:",
        "đã đổi tên:",
        "μετονομασία:",
        "переименовано:",
        "перейменовано:",
        "преименуван:",
        "重命名：",
        "重新命名：",
        "이름 바꿈:"
        // end renamed
      ),

    typechange: () =>
      // prettier-ignore
      choice(
        // typechange
        "Typänderung:",
        "cambio de tipo:",
        "cambios de tipo:",
        "canviat de tipus:",
        "cineál cineál:",
        "modif. type :",
        "modifica tipo:",
        "tipe perubahan:",
        "tipo alterado:",
        "typbyte:",
        "typechange:",
        "türü değiştirildi:",
        "zmiana typu:",
        "đổi kiểu:",
        "đổi-kiểu:",
        "αλλαγή τύπου:",
        "змінено тип:",
        "изменен тип:",
        "смяна на вида:",
        "类型变更：",
        "類型變更：",
        "종류 바뀜:"
        // end typechange
      ),

    _scissor: ($) => seq(alias(SCISSORS, $.scissor), $.diff),

    _uptodate: ($) =>
      // prettier-ignore
      choice(
        // uptodate
        seq("Cabang Anda mutakhir dengan '", $.branch, "'."),
        seq("Dalınız '", $.branch, "' ile güncel."),
        seq("Dalınız \"", $.branch, "\" ile güncel."),
        seq("Din gren är à jour med \"", $.branch, "\"."),
        seq("Din gren är à jour med ”", $.branch, "”."),
        seq("Ihr Branch ist auf demselben Stand wie '", $.branch, "'."),
        seq("Il tuo branch è aggiornato rispetto a '", $.branch, "'."),
        seq("La vostra branca està al dia amb «", $.branch, "»."),
        seq("Nhánh của bạn đã cập nhật với '", $.branch, "'."),
        seq("Nhánh của bạn đã cập nhật với “", $.branch, "”."),
        seq("O seu ramo está atualizado com '", $.branch, "'."),
        seq("Teu ramo está atualizado com '", $.branch, "'."),
        seq("Tu rama está actualizada con '", $.branch, "'."),
        seq("Twoja gałąź jest na bieżąco z „", $.branch, "”."),
        seq("Tá do bhrainse cothrom le dáta le '", $.branch, "'."),
        seq("Votre branche est à jour avec '", $.branch, "'."),
        seq("Your branch is up to date with '", $.branch, "'."),
        seq("Ο κλάδος σας είναι ενήμερος με το '", $.branch, "'."),
        seq("Ваша ветка обновлена в соответствии с «", $.branch, "»."),
        seq("Ваша гілка не відрізняється від '", $.branch, "'."),
        seq("Ваша гілка не відрізняється від \"", $.branch, "\"."),
        seq("Клонът е обновен към „", $.branch, "“."),
        seq("Эта ветка соответствует «", $.branch, "»."),
        seq("您的分支与上游分支 '", $.branch, "' 一致。"),
        seq("您的分支與上游分支 '", $.branch, "' 一致。"),
        seq("브랜치가 '", $.branch, "'에 맞게 업데이트된 상태입니다.")
        // end uptodate
      ),

    _behind: ($) =>
      // prettier-ignore
      choice(
        // behind
        seq("Cabang Anda di belakan '", $.branch, "' oleh ", $.number, " komit, dan bisa di maju-cepatkan."),
        seq("Cabang Anda di belakang '", $.branch, "' oleh ", $.number, " komit, dan bisa di maju-cepatkan."),
        seq("Dalınız '", $.branch, "' dalından ", $.number, " işleme geride ve ileri sarılabilir."),
        seq("Din gren ligger efter \"", $.branch, "\" med ", $.number, " incheckning, och kan snabbspolas."),
        seq("Din gren ligger efter \"", $.branch, "\" med ", $.number, " incheckningar, och kan snabbspolas."),
        seq("Din gren ligger efter ”", $.branch, "” med ", $.number, " incheckning, och kan snabbspolas."),
        seq("Din gren ligger efter ”", $.branch, "” med ", $.number, " incheckningar, och kan snabbspolas."),
        seq("Ihr Branch ist ", $.number, " Commit hinter '", $.branch, "', und kann vorgespult werden."),
        seq("Ihr Branch ist ", $.number, " Commits hinter '", $.branch, "', und kann vorgespult werden."),
        seq("Il tuo branch, rispetto a '", $.branch, "', è indietro di ", $.number, " commit e ne posso eseguire il fast forward."),
        seq("La vostra branca està ", $.number, " comissions per darrere de «", $.branch, "», i pot avançar-se ràpidament."),
        seq("La vostra branca està ", $.number, " comissió per darrere de «", $.branch, "», i pot avançar-se ràpidament."),
        seq("Nhánh của bạn đứng sau '", $.branch, "' ", $.number, " lần chuyển giao, và có thể được chuyển-tiếp-nhanh."),
        seq("Nhánh của bạn đứng đằng sau “", $.branch, "” ", $.number, " lần chuyển giao, và có thể được chuyển-tiếp-nhanh."),
        seq("O seu ramo está atrás de '", $.branch, "' por ", $.number, " commit, podendo ser atualizado com avanço rápido."),
        seq("O seu ramo está atrás de '", $.branch, "' por ", $.number, " commits, podendo ser atualizado com avanço rápido."),
        seq("Teu ramo está atrás de '", $.branch, "' por ", $.number, " memória, e pode ser avançado."),
        seq("Teu ramo está atrás de '", $.branch, "' por ", $.number, " memórias, e pode ser avançado."),
        seq("Tu rama está detrás de '", $.branch, "' por ", $.number, " commit, y puede ser avanzada rápido."),
        seq("Tu rama está detrás de '", $.branch, "' por ", $.number, " commits, y puede ser avanzada rápido."),
        seq("Twoja gałąź jest za „", $.branch, "” o ", $.number, " zapis i może zostać przewinięta."),
        seq("Twoja gałąź jest za „", $.branch, "” o ", $.number, " zapisy i może zostać przewinięta."),
        seq("Twoja gałąź jest za „", $.branch, "” o ", $.number, " zapisów i może zostać przewinięta."),
        seq("Tá do bhrainse taobh thiar de '", $.branch, "' faoi ", $.number, " tiomantas, agus is féidir é a luasghéarú ar aghaidh."),
        seq("Tá do bhrainse taobh thiar de '", $.branch, "' faoi ", $.number, " tiomnuithe, agus is féidir é a luasghéarú ar aghaidh."),
        seq("Votre branche est en retard sur '", $.branch, "' de ", $.number, " commit, et peut être mise à jour en avance rapide."),
        seq("Votre branche est en retard sur '", $.branch, "' de ", $.number, " commits, et peut être mise à jour en avance rapide."),
        seq("Your branch is behind '", $.branch, "' by ", $.number, " commit, and can be fast-forwarded."),
        seq("Your branch is behind '", $.branch, "' by ", $.number, " commits, and can be fast-forwarded."),
        seq("Ο κλάδος σας είναι πίσω από το '", $.branch, "' κατά ", $.number, " υποβολές, και μπορεί να κάνει ταχεία προώθηση."),
        seq("Ο κλάδος σας είναι πίσω από το '", $.branch, "' κατά ", $.number, " υποβολή, και μπορεί να κάνει ταχεία προώθηση."),
        seq("Ваша ветка отстает от «", $.branch, "» на ", $.number, " коммит и может быть перемотана вперед."),
        seq("Ваша ветка отстает от «", $.branch, "» на ", $.number, " коммита и может быть перемотана вперед."),
        seq("Ваша ветка отстает от «", $.branch, "» на ", $.number, " коммитов и может быть перемотана вперед."),
        seq("Ваша гілка відстає від \"", $.branch, "\" на ", $.number, " коміт, і її можна перемотати вперед."),
        seq("Ваша гілка відстає від \"", $.branch, "\" на ", $.number, " коміти, і її можна перемотати вперед."),
        seq("Ваша гілка відстає від гілки '", $.branch, "' на ", $.number, " комітів, і її можна перемотати вперед."),
        seq("Ваша гілка відстає від гілки \"", $.branch, "\" на ", $.number, " комітів, і її можна перемотати вперед."),
        seq("Ветка отстает от «", $.branch, "» на ", $.number, " коммит и может быть быстро перемотана."),
        seq("Ветка отстает от «", $.branch, "» на ", $.number, " коммита и может быть быстро перемотана."),
        seq("Ветка отстает от «", $.branch, "» на ", $.number, " коммитов и может быть быстро перемотана."),
        seq("Клонът ви е с ", $.number, " подаване зад „", $.branch, "“ и може да бъде превъртян."),
        seq("Клонът ви е с ", $.number, " подаване зад „", $.branch, "“ и може да се превърти."),
        seq("Клонът ви е с ", $.number, " подавания зад „", $.branch, "“ и може да бъде превъртян."),
        seq("Клонът ви е с ", $.number, " подавания зад „", $.branch, "“ и може да се превърти."),
        seq("您的分支落后 '", $.branch, "' 共 ", $.number, " 个提交，并且可以快进。"),
        seq("您的分支落後 '", $.branch, "' 共 ", $.number, " 個提交，並且可以快轉。"),
        seq("브랜치가 '", $.branch, "'보다 ", $.number, "개 커밋 뒤에 있고, 앞으로 돌릴 수 있습니다.")
        // end behind
      ),

    _detached_head: ($) =>
      seq(
        alias(
          // prettier-ignore
          choice(
            // detached_head
            "HEAD desacoplada en ",
            "HEAD desanexada em ",
            "HEAD destacada em ",
            "HEAD detached at ",
            "HEAD détachée sur ",
            "HEAD frånkopplad vid ",
            "HEAD losgelöst bei ",
            "HEAD odłączone na ",
            "HEAD scoite ag ",
            "HEAD scollegato su ",
            "HEAD separat a ",
            "HEAD terlepas pada ",
            "HEAD được tách rời tại ",
            "HEAD şurada ayrıldı: ",
            "HEAD відʼєднано на ",
            "HEAD отделён на ",
            "HEAD가 다음 위치에서 분리: ",
            "Αποσυνδεδεμένο HEAD στο ",
            "Отсоединённый указатель HEAD указывает на ",
            "Указателят „HEAD“ не е свързан и е при ",
            "头指针分离于 ",
            "開頭指標分離於 "
            // end detached_head
          ),
          $.text
        ),
        alias($._commit, $.branch),
        NEWLINE
      ),

    _interactive_rebasing: ($) =>
      // prettier-ignore
      choice(
        // interactive_rebase
        seq("athbhunú idirghníomhach atá ar siúl; ar ", $.branch),
        seq("interactive rebase in progress; onto ", $.branch),
        seq("interaktiv ombasering pågår; ovanpå ", $.branch),
        seq("interaktives Rebase im Gange; auf ", $.branch),
        seq("rebasage interactif en cours ; sur ", $.branch),
        seq("rebase có tương tác đang được thực hiện; lên trên ", $.branch),
        seq("rebase interactivo en progreso; en ", $.branch),
        seq("rebase interactivo en progreso; sobre ", $.branch),
        seq("rebase interativo em curso; sobre ", $.branch),
        seq("rebase interattivo in corso su ", $.branch),
        seq("rebase ở chế độ tương tác đang được thực hiện; lên trên ", $.branch),
        seq("sedang mendasarkan ulang interaktif; ke ", $.branch),
        seq("trwa interaktywne przestawianie na ", $.branch),
        seq("«rebase» interactiu en curs; sobre ", $.branch),
        seq("şunun üzerine etkileşimli yeniden temellendirme sürmekte: ", $.branch),
        seq("εκτελείται διαδραστικό rebase, πάνω στο ", $.branch),
        seq("извършвате интерактивно пребазиране върху ", $.branch),
        seq("интерактивное перемещение в процессе; над ", $.branch),
        seq("триває інтерактивне перебазування на ", $.branch),
        seq("інтерактивне перебазовування в процесі; на ", $.branch),
        seq("互動式重定基底動作正在進行中；至 ", $.branch),
        seq("交互式变基操作正在进行中；至 ", $.branch),
        seq("대화형 리베이스 진행 중. 갈 위치는 ", $.branch)
        // end interactive_rebase
      ),
  },
});
