test/corpus/body.txt
================================================================================
Simple body
================================================================================
This is a simple subject

This is a simple body
--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (message_line)))

================================================================================
Subject with comment
================================================================================
this is a simple subject

# comment

--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (comment)))

================================================================================
Empty file w/ comments
================================================================================

# comment

--------------------------------------------------------------------------------

(source
  (message
    (comment)))

================================================================================
Empty file w/ empty comment
================================================================================

#

--------------------------------------------------------------------------------

(source
  (message
    (comment)))

================================================================================
Multiline body
================================================================================
This is a simple subject

This is a simple body.
With a second line.

And a paragraph.
--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (message_line)
    (message_line)
    (message_line)))

================================================================================
BREAKING CHANGE
================================================================================

test

BREAKING CHANGE: My message
BREAKING-CHANGE: also valid
--------------------------------------------------------------------------------

(source
  (message
    (message_line)
    (breaking_change
      (token)
      (value))
    (breaking_change
      (token)
      (value))))

================================================================================
BREAKING CHANGE with overflow
================================================================================

BREAKING CHANGE: My message with a long long text that will overflow with ease.
--------------------------------------------------------------------------------

(source
  (message
    (breaking_change
      (token)
      (value))))

================================================================================
Overflowed summary
================================================================================
This is a simple subject

This is a simple body 
This is a simple body with so muche characters that it will overflow the summary limit
This is a simple body 
--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (message_line)
    (message_line)
    (message_line)))

================================================================================
Allows 1 char summary
================================================================================
This is a simple subject

T
--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (message_line)))
