test/corpus/comments.txt
================================================================================
Simple comments
================================================================================
This is a simple subject

# This is a simple body

--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (comment)))

================================================================================
Comment without space
================================================================================
This is a simple subject

#This is a simple body

--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (comment)))

================================================================================
Empty comment
================================================================================
This is a simple subject

#

--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (comment)))

================================================================================
Multiline comments
================================================================================
This is a simple subject

# This is a simple comment.
#
#With a second line.

# And a paragraph.

--------------------------------------------------------------------------------

(source
  (subject)
  (message
    (comment)
    (comment)
    (comment)
    (comment)))

================================================================================
Comment title
================================================================================

# This is a simple title:
# With a content

--------------------------------------------------------------------------------

(source
  (message
    (comment
      (title))
    (comment)))
